[gd_scene load_steps=10 format=3 uid="uid://brtrh0g6ywkr6"]

[ext_resource type="Script" path="res://scripts/value_displayer.gd" id="1_xq8cq"]
[ext_resource type="Resource" uid="uid://b7ud8rovyxc25" path="res://scenes/items/data/Ore Value Displayer.tres" id="2_da7xc"]
[ext_resource type="PackedScene" uid="uid://kaam8tiwss0t" path="res://scenes/ore_value_ui.tscn" id="4_vojfp"]
[ext_resource type="PackedScene" uid="uid://cotn4ygsivl1t" path="res://scenes/detector.tscn" id="6_sgvlv"]
[ext_resource type="Script" path="res://scripts/item_holder.gd" id="7_hl202"]
[ext_resource type="Texture2D" uid="uid://dyqjq6hgr6m4n" path="res://sprites/tilesets/upgraders.png" id="8_qqsnc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4ei5"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mudn"]
atlas = ExtResource("8_qqsnc")
region = Rect2(2.08165e-12, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcnw2"]
atlas = ExtResource("8_qqsnc")
region = Rect2(80, 16, 16, 16)

[node name="Ore Value Displayer" type="Area2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
gravity_point_center = Vector2(2.08165e-12, -10)
gravity_direction = Vector2(2.08165e-12, -10)
gravity = 8.52651e-14
script = ExtResource("1_xq8cq")
item_data = ExtResource("2_da7xc")
value_display_ui = ExtResource("4_vojfp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k4ei5")

[node name="Detector" parent="." instance=ExtResource("6_sgvlv")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.08165e-12, 0)
texture = SubResource("AtlasTexture_1mudn")

[node name="ItemHolder" type="Node2D" parent="."]
script = ExtResource("7_hl202")

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(-2.08165e-12, 0)
rotation = -1.5708
texture = SubResource("AtlasTexture_mcnw2")

[connection signal="belt_detected" from="Detector" to="." method="_on_detector_belt_detected"]
[connection signal="item_held" from="ItemHolder" to="." method="_on_item_holder_item_held"]
